--- a/style.css
+++ b/style.css
@@ -27,7 +27,12 @@ body{
   text-decoration: none;
   list-style: none;
 }
-
+.section-container{
+  position: sticky;
+  top: 0%;
+  z-index: 9999;
+  
+}
 .container-logo img{
  width: 100px;
 }
@@ -64,8 +69,9 @@ body{
   align-items: center;
   justify-content: space-between;
   margin: 0px 10px;
-  z-index: 9999;
+  /* z-index: 9999; */
   /* position: fixed; */
+  background-color: white;
   
 }
 #toggle-menu:checked~.navbar-list{
@@ -154,4 +160,53 @@ body{
   animation-duration: 10s; 
   /* color: blue; */
   animation-iteration-count: infinite;
+}
+.contactos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2 rem;
+  /* background-color: aqua; */
+}
+.input{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items:flex-start;
+  /* background-color: aqua; */
+  width: 250px;
+  gap: 0.5rem;
+  padding: 0.5rem;
+}
+.input input{
+  width: 250px;
+  border-radius: 5px;
+  height: 30px;
+}
+.consulta textarea{
+  width: 250px;
+  min-height: 100px;
+}
+footer{
+  background-color: gray;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* height: 80px; */
+  width: 100%;
+  gap: 1rem;
+}
+.redes{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* background-color: aqua; */
+  width: 20%;
+  font-size: 200%;
+
+}
+footer p{
+  font-size: 10px;
 }
