--- a/login.css
+++ b/login.css
@@ -3,19 +3,70 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container-logo img{
+    width: 100px;
+   }
 .login-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 80%;
+    width: 300px;
     
     /* background: url(./img/logo.png) no-repeat center/cover; */
     gap: 1rem;
+    box-shadow: 2px 2px 1px gray;
+    border: solid black;
+    border-radius: 10px;
+    /* background-color: aqua; */
 }
 body{
     width: 100vw;
     max-width: 100%;
     height: 100vh;
     max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-image: url(./img/logo.png) no-repeat center/cover ; */
+}
+.login-container i{
+    font-size: 100px;
+    margin: 5px;
+    
+}
+.login{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: flex-start;
+}
+.login input{
+    border-radius: 10px;
+    height: 30px;
+    width: 250px;    
+}
+.btnsubmit{
+    height: 30px;
+    width: 250px;
+    background-color: navy;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 15px;
+}
+.btn2{
+    background-color: grey;
+    width: 200px;
+}
+
+.btn2:hover{
+  transform:  scale(1.2);
+}
+.btnsubmit:hover{
+    cursor: pointer;
 }
