--- a/login.css
+++ b/login.css
@@ -22,7 +22,7 @@
     border-radius: 10px;
     /* background-color: aqua; */
 }
-body{
+.container{
     width: 100vw;
     max-width: 100%;
     height: 100vh;
@@ -71,13 +71,59 @@ body{
     cursor: pointer;
 }
 @media (min-width:1024px) {
-   body{
+  body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:darkseagreen ;
+    /* position: relative; */
+    height: 100vh;
+  }
+   .container-logo img{
+    width: 40%;
+    min-width: 250px;
+   }
+   .container >.container-logo{
+    order: 2;
+   }
+   .container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    text-align: center;
+    max-width: 1100px;
+    width: 95%;
+    max-height: 800px;
+    height: 50%;
+    min-height:300px ;
+    /* height: 100vh; */
+    border: solid;
+    border-radius: 10px;
+    box-shadow: 10px 5px 5px grey;
+    margin: 0 auto;
+    background-color: white;
+    gap: 1rem;
+    text-align: center;
+    /* position: absolute; */
+    /* top: 500px; */
+   
+    
    }
-   .container-logo img{
-    width: 50%;
+   .login-container{
+    border: none;
+    box-shadow: none;
+    margin-left:150px;
+    
    }
+   .login-container i{
+    display: none;
+   }
+   .btnsubmit{
+    width: 250px;
+   }
+   .btnsubmit:hover{
+    transform: scale(1.3);
+   }
+
 }
